# libatasmart

./: .gitignore  INTERFACE  Makefile  Makefile.am  README  SmartKit.conf  atasmart.c  atasmart.h  atasmart.py  atasmart.vapi  atasmart_py.c  autogen.sh  bootstrap.sh  configure.ac  gnome-disk-health.glade  gnome-disk-health.vala  libatasmart.pc.in  setup.py  skdump.c  sktest.c  smart.c  smart.h  smart.vapi  smartkit.c  smartkitd.vala  sptest.c  strpool.c
blob-examples/: FUJITSU_MHY2120BH--0084000D  FUJITSU_MHY2120BH--0085000B  FUJITSU_MHY2250BH--0085000B  FUJITSU_MHZ2160BH_G1--0084000A  INTEL_SSDSA2CW120G3--4PC10302  Maxtor 96147H8--BAC51KJ0  README  SAMSUNG HD501LJ--CR100-12  SAMSUNG_MP0804H--UE100-14  ST320410A--3.39  ST9100821AS--3.CME  TOSHIBA MK1651GSY--38IGT0G5T  WDC WD2500JB--00REA0-20.00K20  WDC WD5000AAKS--00TMA0-12.01C01  WDC_WD2500JB--00REA0-20.00K20  WDC_WD2500JS-75NCB3--10.02E04
m4/: ax_cc_for_build.m4
strpool/: Makefile.am
